# dashtrash

./: .gitignore  Brewfile  Dockerfile  HOMEBREW_SETUP.md  LICENSE  MANIFEST.in  QUICK_INSTALL.md  README.md  SOLUTION_SUMMARY.md  dashboard-showcase.yml  dashboard.yml  dashtrash.rb  fix-pipx-path.sh  install-pipx.sh  install.sh  main.py  pyproject.toml  requirements.txt
.cursor/rules/: readme.mdc  readme2.mdc  structure.mdc
.github/workflows/: publish.yml  test.yml
Formula/: dashtrash.rb
dashtrash/: __init__.py  __main__.py  banner.py  config.py  core.py  main.py
dashtrash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dashtrash/panels/: __init__.py  clock.py  logs.py  system.py  temperature.py
dashtrash/plugins/: __init__.py  demo.py
docs/: INSTALLATION.md  PUBLISHING.md
scripts/: install-brew.sh  release.sh  setup-homebrew-tap.sh
snap/: snapcraft.yaml
